# airline-management

./: Airline Management Project.pptx  CMakeLists.txt  ClassDiagram.drawio
db/: AIRLINE_ROAD.table  AIRPORT.table  Airplanes.table  DOCUMENTS.table  LP_AIRPLANE_STATUS.table  PASSENGER_SEATS.table  PEOPLE.table
src/: main.cpp
src/Airplanes/: Airplane.cpp  Airplane.h  AirplaneStatus.h  Seat.cpp  Seat.h
src/Airports/: AirlineRoad.cpp  AirlineRoad.h  Airport.cpp  Airport.h
src/Others/: MaintenceTeam.cpp  MaintenceTeam.h  Route.cpp  Route.h  Schedule.h
src/People/: Document.cpp  Document.h  Person.cpp  Person.h
src/People/Passengers/: Passenger.cpp  Passenger.h
src/People/Workers/: CrewWorker.cpp  CrewWorker.h  GroundServicesWorker.cpp  GroundServicesWorker.h  MaintenanceWorker.cpp  MaintenanceWorker.h  PilotWorker.cpp  PilotWorker.h
src/Places/: City.cpp  City.h  Country.cpp  Country.h
